2009-06-08 Marc Noirot <marc.noirot@gmail.com>
	* flvmeta.c (main): Fixed error messages showing bad filenames.

	* update.c (write_flv): Fixed timestamp handling again.

	* update.c (write_flv): Improved invalid file handling, specifically
	  in the case there is invalid data after the last tag.

	* update.c (get_flv_info): Fixed invalid information reading
	  when reading invalid tags which could potentially lead to
	  memory overflow and creation of invalid files.

	* src/CMakeLists.txt: Removed unused XSD schema variable.

	* tests/check_amf.c (test_amf_number_new): Fixed invalid test
	  message.

2009-06-01 Marc Noirot <marc.noirot@gmail.com>
	* Amf0.xsd, flv.xsd: Added XML schemas for FLV and AMF0.

	* amf.c, amf.h: Added an event based AMF iterator (incomplete).

	* json.c, json.h: Added and fixed the msjson JSON parser.

	* dump.c: Partially implemented XML FLV file dump.

	* flv.c, flv.h: Implemented a full FLV parsing API, with stream
	  objects and an event based API.

	* flvdump.c: Deleted flvdump.c.

	* update.c: Added support for the -l, --no-lastsecond option.

2009-05-29 Marc Noirot <marc.noirot@gmail.com>
	* CMakeLists.txt: Fixed large file support definitions for Win32.

	* update.c: Added support for the --add option.

	* update.c: Added support for the --verbose option.

	* update.c (get_flv_info): Added support for the --ignore option.

2009-05-27 Marc Noirot <marc.noirot@gmail.com>
	* CMakeLists.txt, src/CMakeLists.txt: Various fixes and support for
	  the windows binary distribution generation.

	* Makefile.am, src/Makefile.am: Various fixes.

	* msvc: Made cmake the official Win32 build platform.

	* mmap.c, mmap.h, stream.c, stream.h : Removed unused files, memory
	  mapping support is not used anymore.

	* amf.c: Fixed header include.

	* types.h, types.c: Cleaned up large file support.

2009-04-17 Marc Noirot <marc.noirot@gmail.com>
	* flvmeta.c (get_flv_info): Fixed a bug where two consecutive tags of